--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-electron",
-  "version": "6.0.1",
-  "description": "Angular 8 with Electron (Typescript + SASS + Hot Reload)",
+  "name": "ExCelery",
+  "version": "0.1.0",
+  "description": "An app for Excel automation, built with Agnular and Electron (Typescript + SASS + Hot Reload)",
   "homepage": "https://github.com/maximegris/angular-electron",
   "author": {
-    "name": "Maxime GRIS",
-    "email": "maxime.gris@gmail.com"
+    "name": "Shelby McCowan",
+    "email": "smccowan33@gmail.com"
   },
   "keywords": [
     "angular",
@@ -38,11 +38,11 @@
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.0",
+    "@angular-devkit/build-angular": "^0.800.0",
     "@angular/cli": "8.0.1",
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
-    "@angular/compiler-cli": "8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
     "@angular/core": "8.0.0",
     "@angular/forms": "8.0.0",
     "@angular/language-service": "8.0.0",
@@ -69,7 +69,7 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
-    "mocha": "6.1.2",
+    "mocha": "^6.1.4",
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.2",
     "spectron": "5.0.0",
@@ -82,5 +82,10 @@
   },
   "engines": {
     "node": ">=10.9.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   }
 }
