Added ExcelJS dependency. This is in favor of support for Office 2013

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "exceljs": "^1.13.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0"
   }
