Finally got ExcelJS working with a few examples in code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+        "exceljs": [
+            "../node_modules/exceljs/dist/es5/exceljs.browser"
+        ]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
