--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ install:
   - npm install
 script:
   - ng lint
-  - npm run test
+  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - npm run e2e
   - npm run build
