--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,14 @@ sudo: required
 services:
   - xvfb
 addons:
-  chrome: stable
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+cache:
+  directories:
+    - node_modules
 before_script:
   - export DISPLAY=:99.0
 install:
