Changed path again for Travis CI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-        "baseUrl": ["src"],
+        "baseUrl": ["./"],
         "exceljs": [
             "../node_modules/exceljs/dist/es5/exceljs.browser"
         ]
