--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ install:
   - npm install
 script:
   - ng lint
-  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --baseUrl=./
+  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - npm run e2e
   - npm run build
