--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             ],
             "scripts": [
               "./node_modules/popper.js/dist/umd/popper.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/exceljs/dist/exceljs.min.js"
             ]
           },
           "configurations": {
