--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "src/colors.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
