--- a/tsconfig-serve.json
+++ b/tsconfig-serve.json
@@ -5,7 +5,8 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "module": "commonjs",
+    "target": "es6",
     "types": [
       "node"
     ],
