--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ExCelery",
-  "version": "0.1.0",
-  "description": "An app for Excel automation, built with Agnular and Electron (Typescript + SASS + Hot Reload)",
-  "homepage": "https://github.com/maximegris/angular-electron",
+  "version": "0.2.0",
+  "description": "An app for Excel automation, built with Angular and Electron (Typescript + SASS + Hot Reload)",
+  "homepage": "https://github.com/MusicDev33/ExCelery",
   "author": {
     "name": "Shelby McCowan",
     "email": "smccowan33@gmail.com"
