--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "bootstrap": "^4.3.1",
     "exceljs": "^1.13.0",
     "jquery": "^3.4.1",
+    "ng2-tooltip-directive": "^2.1.9",
     "popper.js": "^1.15.0"
   }
 }
