--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "exceljs": "^1.13.0",
     "jquery": "^3.4.1",
     "ng2-tooltip-directive": "^2.1.9",
+    "ngx-clipboard": "^12.2.0",
     "popper.js": "^1.15.0"
   }
 }
